helm/istio-gateway/destination-rule.yml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
    - name: v1
      labels:
        app: nginx
