helm/istio-gateway/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: 200-599
    kubernetes.io/ingress.class: azure/application-gateway
  name: gateway
  namespace: istio-system
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              number: 80
        path: /
        pathType: Prefix
