helm/istio-gateway/virtual-service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - app.devops.com
    - nginx
  gateways:
    - nginx
  http:
    - match:
        - uri:
            prefix: /webhook/
      route:
        - destination:
            host: nginx
            subset: v1
